--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QK'
 - !lcsh 'Trees -- North America'
+- GITenberg
 title: 'Trees of the Northern United States
 
   Their Study, Description and Determination'
